--- a/web/BInformation/test.html
+++ b/web/BInformation/test.html
@@ -11,130 +11,130 @@
 </h1>
 <hr>
 
-
-        <table class="tableForIndex">
-            <tr>
-                <th>
-                    <h3>
-                        IP地址
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getIpAddress().getIPAddress()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        默认网关
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getSubnetMask().getSubnetMask()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        网络种类
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getNetKind()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        子网数量
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getSubnetNumbers()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        可用子网数量
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getEffectiveSubnetNumber()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        子网中主机数量
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getHostNumber()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        有效主机数量
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getEffectiveHostNumber()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        网段开始IP地址
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getBeginIp().getIPAddress()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        网段结束IP地址
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getEndIp().getIPAddress()%>
-                    </h4>
-                </td>
-            </tr>
-            <tr>
-                <th>
-                    <h3>
-                        网段广播地址
-                    </h3>
-                </th>
-                <td>
-                    <h4>
-                        <%=subnettingTool.getBroadcastBIpAddress().getIPAddress()%>
-                    </h4>
-                </td>
-            </tr>
-        </table>
-
+<center>
+    <table class="tableForIndex">
+        <tr>
+            <th>
+                <h3>
+                    IP地址
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getIpAddress().getIPAddress()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    默认网关
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getSubnetMask().getSubnetMask()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    网络种类
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getNetKind()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    子网数量
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getSubnetNumbers()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    可用子网数量
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getEffectiveSubnetNumber()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    子网中主机数量
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getHostNumber()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    有效主机数量
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getEffectiveHostNumber()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    网段开始IP地址
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getBeginIp().getIPAddress()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    网段结束IP地址
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getEndIp().getIPAddress()%>
+                </h4>
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <h3>
+                    网段广播地址
+                </h3>
+            </th>
+            <td>
+                <h4>
+                    <%=subnettingTool.getBroadcastBIpAddress().getIPAddress()%>
+                </h4>
+            </td>
+        </tr>
+    </table>
+</center>
 
 </body>
 </html>
